--- a/H1Emu Launcher/SettingsPages/ReportBug.xaml
+++ b/H1Emu Launcher/SettingsPages/ReportBug.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="H1EmuLauncher.SettingsPages.ReportBug"
+﻿<Page x:Class="H1Emu_Launcher.SettingsPages.ReportBug"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:H1EmuLauncher.SettingsPages"
+      xmlns:local="clr-namespace:H1Emu_Launcher.SettingsPages"
       mc:Ignorable="d"
       UseLayoutRounding="True"
       d:DesignWidth="735"
