--- a/H1Emu Launcher/SteamFramePages/DownloadStatus.xaml
+++ b/H1Emu Launcher/SteamFramePages/DownloadStatus.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="H1EmuLauncher.SteamFramePages.DownloadStatus"
+﻿<UserControl x:Class="H1Emu_Launcher.SteamFramePages.DownloadStatus"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
