--- a/H1Emu Launcher/App.xaml
+++ b/H1Emu Launcher/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="H1EmuLauncher.App"
+﻿<Application x:Class="H1Emu_Launcher.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
