--- a/H1Emu Launcher/Language/StringResources.bg-BG.xaml
+++ b/H1Emu Launcher/Language/StringResources.bg-BG.xaml
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe се използва.\n\nЗатворете всички отворени прозорци на H1Z1.\n\nМожете да използвате бутона по-долу, за да убиете всички процеси на H1Z1.</system:String>
     <system:String x:Key="item122">Сегашна версия на играта: 2016</system:String>
     <system:String x:Key="item124">Версия на стартера</system:String>
-    <system:String x:Key="item125">Авторско право © 2024 | Проект H1Emu</system:String>
+    <system:String x:Key="item125">Авторско право © 2025 | Проект H1Emu</system:String>
     <system:String x:Key="item126">Главен разработчик</system:String>
     <system:String x:Key="item127">Разработчици</system:String>
     <system:String x:Key="item128">Администратори</system:String>
@@ -200,4 +200,5 @@
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
     <system:String x:Key="item221">Paste</system:String>
     <system:String x:Key="item222">Would you like to return to the login page?</system:String>
+    <system:String x:Key="item223">Steam enabled</system:String>
 </ResourceDictionary>
