--- a/H1Emu Launcher/Language/StringResources.en-EN.xaml
+++ b/H1Emu Launcher/Language/StringResources.en-EN.xaml
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe is currently being used.\n\nPlease close any open instances of H1Z1.\n\nYou can use the button below to kill all processes of H1Z1.</system:String>
     <system:String x:Key="item122">Current Game Version: 2016</system:String>
     <system:String x:Key="item124">Launcher version</system:String>
-    <system:String x:Key="item125">Copyright © 2024 | H1Emu Project</system:String>
+    <system:String x:Key="item125">Copyright © 2025 | H1Emu Project</system:String>
     <system:String x:Key="item126">Lead Development</system:String>
     <system:String x:Key="item127">Developers</system:String>
     <system:String x:Key="item128">Administrators</system:String>
@@ -200,4 +200,5 @@
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
     <system:String x:Key="item221">Paste</system:String>
     <system:String x:Key="item222">Would you like to return to the login page?</system:String>
+    <system:String x:Key="item223">Steam enabled</system:String>
 </ResourceDictionary>
