--- a/H1Emu Launcher/Language/StringResources.es-ES.xaml
+++ b/H1Emu Launcher/Language/StringResources.es-ES.xaml
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe está en ejecución.\n\nCierre todas las instancias abiertas de H1Z1.\n\nPuede usar el botón a continuación para eliminar todos los procesos de H1Z1.</system:String>
     <system:String x:Key="item122">Versión De Juego Actual: 2016</system:String>
     <system:String x:Key="item124">Versión del launcher</system:String>
-    <system:String x:Key="item125">Derechos de autor © 2024 | Proyecto H1Emu</system:String>
+    <system:String x:Key="item125">Derechos de autor © 2025 | Proyecto H1Emu</system:String>
     <system:String x:Key="item126">Desarrolladores líder</system:String>
     <system:String x:Key="item127">Desarrolladores</system:String>
     <system:String x:Key="item128">Administradores</system:String>
@@ -200,4 +200,5 @@
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
     <system:String x:Key="item221">Paste</system:String>
     <system:String x:Key="item222">Would you like to return to the login page?</system:String>
+    <system:String x:Key="item223">Steam enabled</system:String>
 </ResourceDictionary>
