--- a/H1Emu Launcher/Language/StringResources.pl-PL.xaml
+++ b/H1Emu Launcher/Language/StringResources.pl-PL.xaml
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe jest aktualnie uruchomiony.\n\nZamknij wszystkie otwarte instancje H1Z1.\n\nMożesz użyć poniższego przycisku, aby zabić wszystkie procesy H1Z1.</system:String>
     <system:String x:Key="item122">Aktualna wersja gry: 2016</system:String>
     <system:String x:Key="item124">Wersja launchera</system:String>
-    <system:String x:Key="item125">Prawa autorskie © 2024 | Projekt H1Emu</system:String>
+    <system:String x:Key="item125">Prawa autorskie © 2025 | Projekt H1Emu</system:String>
     <system:String x:Key="item126">Lead Development</system:String>
     <system:String x:Key="item127">Deweloperzy</system:String>
     <system:String x:Key="item128">Administrators</system:String>
@@ -200,4 +200,5 @@
     <system:String x:Key="item220">There was an error pasting your text:</system:String>
     <system:String x:Key="item221">Paste</system:String>
     <system:String x:Key="item222">Would you like to return to the login page?</system:String>
+    <system:String x:Key="item223">Steam enabled</system:String>
 </ResourceDictionary>
