--- a/H1Emu Launcher/Windows/LauncherWindow.xaml
+++ b/H1Emu Launcher/Windows/LauncherWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="H1EmuLauncher.LauncherWindow"
+﻿<Window x:Class="H1Emu_Launcher.LauncherWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:f="clr-namespace:H1EmuLauncher.Classes"
+        xmlns:f="clr-namespace:H1Emu_Launcher.Classes"
         mc:Ignorable="d"
         UseLayoutRounding="True"
         Title="H1Emu Launcher"
@@ -20,11 +20,11 @@
         Loaded="LauncherWindowLoaded"
         ContentRendered="LauncherWindowContentRendered"
         IsVisibleChanged="LauncherWindowIsVisibleChanged"
-        Closed="LauncherClosed">
+        Closed="LauncherWindowClosed">
 
     <!-- Keep window animations -->
     <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="0" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="7"/>
+        <WindowChrome GlassFrameThickness="1" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="7"/>
     </WindowChrome.WindowChrome>
 
     <!-- Image carousel storyboard animations -->
@@ -420,7 +420,7 @@
                                        Margin="30,15,10,15"
                                        Style="{DynamicResource TextBlockStyle}">
     
-                                <Hyperlink NavigateUri="https://www.h1emu.com/us/changelog/"
+                                <Hyperlink NavigateUri="https://github.com/QuentinGruber/h1z1-server/releases"
                                            RequestNavigate="FullUpdatesHyperlink"
                                            Style="{DynamicResource HyperLinkStyle}">
     
@@ -837,7 +837,8 @@
             </Border>
 
             <!-- Footer -->
-            <Grid Grid.Row="2">
+            <Grid Grid.Row="2"
+                  Background="Transparent">
 
                 <Grid.Triggers>
                     <EventTrigger RoutedEvent="MouseEnter">
