--- a/H1Emu Launcher/Windows/UpdateWindow.xaml
+++ b/H1Emu Launcher/Windows/UpdateWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="H1EmuLauncher.UpdateWindow"
+﻿<Window x:Class="H1Emu_Launcher.UpdateWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -24,7 +24,7 @@
 
     <!-- Keep window animations -->
     <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="0" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="7"/>
+        <WindowChrome GlassFrameThickness="1" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="7"/>
     </WindowChrome.WindowChrome>
 
     <Window.Resources>
