--- a/H1Emu Launcher/Language/StringResources.bg-BG.xaml
+++ b/H1Emu Launcher/Language/StringResources.bg-BG.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">Благодарим ви и се насладете!</system:String>
     <system:String x:Key="item167">Продължи</system:String>
     <system:String x:Key="item168">Сървърът не успя да се пусне, опитайте отново и докладвайте ако проблема продължава.\n\nПреинсталацията на файловете може да оправи проблема.</system:String>
-    <system:String x:Key="item169">• Клиентът е направен от @Eavilaswayce •</system:String>
+    <system:String x:Key="item169">• Клиентът е направен от @Noctiamor •</system:String>
     <system:String x:Key="item170">Хора помогнали финансово</system:String>
     <system:String x:Key="item171">Версия на играта от 22 декември 2016 г., това е по-актуално и се поддържа от проекта.</system:String>
     <system:String x:Key="item172">Версия на играта от 15 януари 2015 г., това не получава толкова много актуализации като 2016 г. и може да й липсват функции.</system:String>
