--- a/H1Emu Launcher/Language/StringResources.es-ES.xaml
+++ b/H1Emu Launcher/Language/StringResources.es-ES.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">¡Gracias y diviértete!</system:String>
     <system:String x:Key="item167">CONTINUAR</system:String>
     <system:String x:Key="item168">El servidor no pudo iniciarse, inténtelo de nuevo y, si el problema persiste, infórmelo.\n\nReinstalar los archivos del servidor puede solucionar este problema.</system:String>
-    <system:String x:Key="item169">• Lanzador hecho por @Eavilaswayce •</system:String>
+    <system:String x:Key="item169">• Lanzador hecho por @Noctiamor •</system:String>
     <system:String x:Key="item170">Contribuyentes Financieros</system:String>
     <system:String x:Key="item171">Versión del juego del 22 de diciembre de 2016, más actualizada y compatible con el proyecto.</system:String>
     <system:String x:Key="item172">Versión del juego del 15 de enero de 2015, no recibe tantas actualizaciones como en 2016 y es posible que carezca de funciones.</system:String>
