--- a/H1Emu Launcher/Language/StringResources.fr-FR.xaml
+++ b/H1Emu Launcher/Language/StringResources.fr-FR.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">Merci et amusez-vous bien!</system:String>
     <system:String x:Key="item167">CONTINUER</system:String>
     <system:String x:Key="item168">Le serveur n'a pas pu démarrer, réessayez et si le problème persiste, veuillez le signaler.\n\nLa réinstallation des fichiers du serveur peut résoudre ce problème.</system:String>
-    <system:String x:Key="item169">• Lanceur réalisé par @Eavilaswayce •</system:String>
+    <system:String x:Key="item169">• Lanceur réalisé par @Noctiamor •</system:String>
     <system:String x:Key="item170">Contributeurs Financiers</system:String>
     <system:String x:Key="item171">Version du jeu du 22 décembre 2016, plus à jour et prise en charge par le projet.</system:String>
     <system:String x:Key="item172">Version du jeu du 15 janvier 2015, elle ne reçoit pas autant de mises à jour qu'en 2016 et peut manquer de fonctionnalités.</system:String>
