--- a/H1Emu Launcher/Language/StringResources.nl-NL.xaml
+++ b/H1Emu Launcher/Language/StringResources.nl-NL.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">Bedankt en veel plezier!</system:String>
     <system:String x:Key="item167">VOLLGENDE</system:String>
     <system:String x:Key="item168">De server kan niet worden gestart, probeer het opnieuw en als het probleem aanhoudt, meld het dan.\n\nHet opnieuw installeren van serverbestanden kan dit probleem oplossen.</system:String>
-    <system:String x:Key="item169">• Launcher gemaakt door @Eavilaswayce •</system:String>
+    <system:String x:Key="item169">• Launcher gemaakt door @Noctiamor •</system:String>
     <system:String x:Key="item170">Financiële Bijdragers</system:String>
     <system:String x:Key="item171">22 december 2016 versie van het spel, deze is meer up-to-date en wordt ondersteund door het project.</system:String>
     <system:String x:Key="item172">15 januari 2015 versie van de game, deze ontvangt niet zoveel updates als 2016 en het kan zijn dat er functies ontbreken.</system:String>
