--- a/H1Emu Launcher/Language/StringResources.pl-PL.xaml
+++ b/H1Emu Launcher/Language/StringResources.pl-PL.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">Dziękujemy!</system:String>
     <system:String x:Key="item167">DALEJ</system:String>
     <system:String x:Key="item168">Nie udało się uruchomić serwera, spróbuj ponownie, a jeśli problem będzie się powtarzał, zgłoś go.\n\nPonowna instalacja plików serwera może rozwiązać ten problem.</system:String>
-    <system:String x:Key="item169">• Launcher stworzony przez @Eavilaswayce •</system:String>
+    <system:String x:Key="item169">• Launcher stworzony przez @Noctiamor •</system:String>
     <system:String x:Key="item170">Współtwórcy Finansowi</system:String>
     <system:String x:Key="item171">Wersja gry z 22 grudnia 2016, jest bardziej aktualna i wspierana przez projekt.</system:String>
     <system:String x:Key="item172">Wersja gry z 15 stycznia 2015, nie otrzymuje tak wielu aktualizacji jak 2016 i może brakować jej funkcji.</system:String>
