--- a/H1Emu Launcher/Language/StringResources.pt-PT.xaml
+++ b/H1Emu Launcher/Language/StringResources.pt-PT.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">Obrigado e divirta-se!</system:String>
     <system:String x:Key="item167">CONTINUAR</system:String>
     <system:String x:Key="item168">O servidor falhou ao iniciar, tente novamente e, se o problema persistir, informe-o.\n\nA reinstalação dos arquivos do servidor pode corrigir esse problema.</system:String>
-    <system:String x:Key="item169">• Lançador feito por @Eavilaswayce •</system:String>
+    <system:String x:Key="item169">• Lançador feito por @Noctiamor •</system:String>
     <system:String x:Key="item170">Contribuintes Financeiros</system:String>
     <system:String x:Key="item171">Versão do jogo de 22 de dezembro de 2016, mais atualizada e apoiada pelo projeto.</system:String>
     <system:String x:Key="item172">Versão de 15 de janeiro de 2015 do jogo, esta não recebe tantas atualizações quanto 2016 e pode não ter recursos.</system:String>
