--- a/H1Emu Launcher/Language/StringResources.se-SE.xaml
+++ b/H1Emu Launcher/Language/StringResources.se-SE.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">Tack så mycket, och ha så kul!</system:String>
     <system:String x:Key="item167">FORTSÄTT</system:String>
     <system:String x:Key="item168">Servern kunde inte startas, försök igen och om problemet kvarstår var vänlig och rapportera det.\n\nOm du installerar om serverfilerna så kan detta problem komma att lösas.</system:String>
-    <system:String x:Key="item169">• Launchern är skapat utav @Eavilaswayce •</system:String>
+    <system:String x:Key="item169">• Launchern är skapat utav @Noctiamor •</system:String>
     <system:String x:Key="item170">Finansiella bidragsgivare</system:String>
     <system:String x:Key="item171">22 December 2016 spelversion, är mer aktuell och stöds av projektet.</system:String>
     <system:String x:Key="item172">15 Januari 2015 spelversion, denna får inte lika många uppdateringar som 2016 och det kan sakna funktioner.</system:String>
