--- a/H1Emu Launcher/Language/StringResources.tr-TR.xaml
+++ b/H1Emu Launcher/Language/StringResources.tr-TR.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">Teşekkürler, keyfinize bakın!</system:String>
     <system:String x:Key="item167">DEVAM ET</system:String>
     <system:String x:Key="item168">Sunucu başlatılamadı, tekrar deneyin ve sorun devam ederse lütfen bildirin.\n\nSunucu dosyalarını yeniden yüklemek bu sorunu çözebilir.</system:String>
-    <system:String x:Key="item169">• Başlatıcı @Eavilaswayce tarafından yapılmıştır •</system:String>
+    <system:String x:Key="item169">• Başlatıcı @Noctiamor tarafından yapılmıştır •</system:String>
     <system:String x:Key="item170">Finansal Katkıda Bulunanlar</system:String>
     <system:String x:Key="item171">Oyunun 22 Aralık 2016 sürümü, bu daha güncel ve proje tarafından destekleniyor.</system:String>
     <system:String x:Key="item172">Oyunun 15 Ocak 2015 sürümü, bu 2016 kadar çok güncelleme almıyor ve özelliklerden yoksun olabilir.</system:String>
