--- a/H1Emu Launcher/Language/StringResources.zh-CN.xaml
+++ b/H1Emu Launcher/Language/StringResources.zh-CN.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">再次感谢您的关注，祝游戏愉快！</system:String>
     <system:String x:Key="item167">继续使用</system:String>
     <system:String x:Key="item168">服务器无法启动，请重试，如果问题仍然存在，请报告。\n\n重新安装服务器文件可能会解决此问题。</system:String>
-    <system:String x:Key="item169">• 启动器由@Eavilaswayce 制作 •</system:String>
+    <system:String x:Key="item169">• 启动器由@Noctiamor 制作 •</system:String>
     <system:String x:Key="item170">财务贡献者</system:String>
     <system:String x:Key="item171">2016 年 12 月 22 日版本的游戏，这是最新的并由项目支持。</system:String>
     <system:String x:Key="item172">2015 年 1 月 15 日版本的游戏，它没有收到 2016 年那么多的更新，并且可能缺少功能。</system:String>
