--- a/H1Emu Launcher/Language/StringResources.de-DE.xaml
+++ b/H1Emu Launcher/Language/StringResources.de-DE.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">Vielen Dank und viel Spaß!</system:String>
     <system:String x:Key="item167">FORTSETZEN</system:String>
     <system:String x:Key="item168">Der Server konnte nicht gestartet werden, versuchen Sie es erneut und wenn das Problem weiterhin besteht, melden Sie es bitte.\n\nEine Neuinstallation von Serverdateien kann dieses Problem beheben.</system:String>
-    <system:String x:Key="item169">• Launcher von @Eavilaswayce •</system:String>
+    <system:String x:Key="item169">• Launcher von @Noctiamor •</system:String>
     <system:String x:Key="item170">Finanzielle Beitragszahler</system:String>
     <system:String x:Key="item171">Spielversion vom 22. Dezember 2016, diese ist aktueller und wird vom Projekt unterstützt.</system:String>
     <system:String x:Key="item172">Spielversion vom 15. Januar 2015, diese erhält nicht so viele Updates wie 2016 und ihr fehlen möglicherweise Funktionen.</system:String>
