--- a/H1Emu Launcher/Language/StringResources.en-EN.xaml
+++ b/H1Emu Launcher/Language/StringResources.en-EN.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">Thank you and enjoy!</system:String>
     <system:String x:Key="item167">CONTINUE</system:String>
     <system:String x:Key="item168">The server failed to start, try again and if the issue persists please report it.\n\nReinstalling server files may fix this issue.</system:String>
-    <system:String x:Key="item169">• Launcher made by @Eavilaswayce •</system:String>
+    <system:String x:Key="item169">• Launcher made by @Noctiamor •</system:String>
     <system:String x:Key="item170">Financial Contributors</system:String>
     <system:String x:Key="item171">22nd December 2016 game version, this is more up to date and supported by the project.</system:String>
     <system:String x:Key="item172">15th January 2015 game version, this doesn't recieve as many updates as 2016 and it may lack features.</system:String>
