--- a/H1Emu Launcher/Language/StringResources.hr-HR.xaml
+++ b/H1Emu Launcher/Language/StringResources.hr-HR.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">Hvala i uživajte!</system:String>
     <system:String x:Key="item167">NASTAVI</system:String>
     <system:String x:Key="item168">Poslužitelj se nije uspio pokrenuti, pokušajte ponovo. Ako problem potraje, prijavite ga.\n\nPonovno instaliranje datoteka poslužitelja može riješiti ovaj problem.</system:String>
-    <system:String x:Key="item169">• Launcher izradio @Eavilaswayce •</system:String>
+    <system:String x:Key="item169">• Launcher izradio @Noctiamor •</system:String>
     <system:String x:Key="item170">Financijski Suradnici</system:String>
     <system:String x:Key="item171">Verzija igre od 22. prosinca 2016., ovo je ažurnije i podržano od strane projekta.</system:String>
     <system:String x:Key="item172">Verzija igre od 15. siječnja 2015., ova ne dobiva toliko ažuriranja kao 2016. i možda joj nedostaju značajke.</system:String>
