--- a/H1Emu Launcher/Language/StringResources.ru-RU.xaml
+++ b/H1Emu Launcher/Language/StringResources.ru-RU.xaml
@@ -147,7 +147,7 @@
     <system:String x:Key="item166">Спасибо и наслаждайтесь!</system:String>
     <system:String x:Key="item167">ПРОДОЛЖИТЬ</system:String>
     <system:String x:Key="item168">Не удалось запустить сервер, попробуйте еще раз. Если проблема не исчезнет, сообщите об этом.\n\nПереустановка файлов сервера может решить эту проблему.</system:String>
-    <system:String x:Key="item169">• Программа запуска от @Eavilaswayce •</system:String>
+    <system:String x:Key="item169">• Программа запуска от @Noctiamor •</system:String>
     <system:String x:Key="item170">Финансовые спонсоры</system:String>
     <system:String x:Key="item171">Версия игры от 22 декабря 2016 года, более актуальная и поддерживаемая проектом.</system:String>
     <system:String x:Key="item172">Версия игры от 15 января 2015 года, она не получает столько обновлений, как версия 2016 года, и в ней могут отсутствовать функции.</system:String>
