--- a/H1Emu Launcher/Windows/LauncherWindow.xaml
+++ b/H1Emu Launcher/Windows/LauncherWindow.xaml
@@ -784,7 +784,7 @@
                                     <Separator Background="#444444"/>
 
                                     <ComboBoxItem Content="{DynamicResource item141}"
-                                                  PreviewMouseLeftButtonUp="AddNewServer"
+                                                  PreviewMouseLeftButtonUp="AddNewServerClick"
                                                   Style="{DynamicResource ComboBoxItemStyle}"/>
 
                                     <ComboBox.Effect>
