--- a/H1Emu Launcher/SettingsPages/About.xaml
+++ b/H1Emu Launcher/SettingsPages/About.xaml
@@ -10,7 +10,8 @@
       Height="470"
       Title="About"
       FontFamily="Bahnschrift"
-      FontSize="16">
+      FontSize="16"
+      Foreground="FloralWhite">
 
     <Page.Resources>
         <ResourceDictionary>
