--- a/H1Emu Launcher/SettingsPages/Options.xaml
+++ b/H1Emu Launcher/SettingsPages/Options.xaml
@@ -10,6 +10,7 @@
       Title="Options"
       FontFamily="Bahnschrift Light"
       FontSize="16"
+      Foreground="FloralWhite"
       Loaded="OptionsLoaded">
 
     <Page.Resources>
