--- a/H1Emu Launcher/Windows/AddItemWindow.xaml
+++ b/H1Emu Launcher/Windows/AddItemWindow.xaml
@@ -7,22 +7,19 @@
         UseLayoutRounding="True"
         Title="{DynamicResource item207}"
         x:Name="AddServer"
-        MinWidth="400"
         WindowStartupLocation="CenterOwner"
-        WindowStyle="SingleBorderWindow"
         ResizeMode="NoResize"
         SizeToContent="WidthAndHeight"
         Background="Transparent"
         FontFamily="Bahnschrift Light"
         FontSize="16"
         Foreground="FloralWhite"
-        ContentRendered="AddServerContentRendered"
         Loaded="AddServerLoaded"
         Closing="AddServerClosing">
 
     <!-- Keep window animations -->
     <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="1" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="7"/>
+        <WindowChrome GlassFrameThickness="1" CaptionHeight="0" NonClientFrameEdges="Bottom, Left, Right"/>
     </WindowChrome.WindowChrome>
 
     <Window.Resources>
