--- a/H1Emu Launcher/Windows/MessageBoxWindow.xaml
+++ b/H1Emu Launcher/Windows/MessageBoxWindow.xaml
@@ -6,28 +6,25 @@
         mc:Ignorable="d"
         UseLayoutRounding="True"
         Title="{DynamicResource item209}"
-        MinWidth="450"
-        MaxWidth="800"
-        MinHeight="210"
-        MaxHeight="900"
+        MinWidth="350"
+        MaxWidth="700"
+        MinHeight="200"
+        MaxHeight="700"
         WindowStartupLocation="CenterOwner"
-        WindowStyle="SingleBorderWindow"
         ResizeMode="NoResize"
         SizeToContent="WidthAndHeight"
-        Background="Transparent"
         FontFamily="Bahnschrift Light"
         FontSize="16"
         Foreground="FloralWhite"
-        ContentRendered="MessageBoxContentRendered"
         Loaded="MessageBoxWindowLoaded"
         Closing="MessageBoxWindowClosing"
         KeyDown="MessageBoxWindowKeyDown">
 
     <!-- Keep window animations -->
     <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="1" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="7"/>
+        <WindowChrome GlassFrameThickness="1" CaptionHeight="0" NonClientFrameEdges="Bottom, Left, Right"/>
     </WindowChrome.WindowChrome>
-    
+
     <Window.Resources>
         <ResourceDictionary>
 
