--- a/H1Emu Launcher/Windows/SettingsWindow.xaml
+++ b/H1Emu Launcher/Windows/SettingsWindow.xaml
@@ -10,7 +10,6 @@
         MinWidth="735"
         MaxWidth="735"
         WindowStartupLocation="CenterOwner"
-        WindowStyle="SingleBorderWindow"
         ResizeMode="NoResize"
         SizeToContent="WidthAndHeight"
         Background="Transparent"
@@ -23,7 +22,7 @@
 
     <!-- Keep window animations -->
     <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="1" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="7"/>
+        <WindowChrome GlassFrameThickness="1" CaptionHeight="0" NonClientFrameEdges="Bottom, Left, Right"/>
     </WindowChrome.WindowChrome>
 
     <Window.Resources>
