--- a/H1Emu Launcher/Windows/SplashWindow.xaml
+++ b/H1Emu Launcher/Windows/SplashWindow.xaml
@@ -11,20 +11,18 @@
         MinWidth="400"
         MaxWidth="800"
         WindowStartupLocation="CenterScreen"
-        WindowStyle="SingleBorderWindow"
         ResizeMode="NoResize"
         SizeToContent="WidthAndHeight"
         Background="Transparent"
         FontFamily="Bahnschrift Light"
         FontSize="16"
         Foreground="FloralWhite"
-        ContentRendered="SplashScreenWindowContentRendered"
         Loaded="SplashScreenWindowLoaded"
         Closing="SplashScreenWindowClosing">
 
     <!-- Keep window animations -->
     <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="1" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="7"/>
+        <WindowChrome GlassFrameThickness="1" CaptionHeight="0" NonClientFrameEdges="Bottom, Left, Right"/>
     </WindowChrome.WindowChrome>
 
     <Window.Resources>
