--- a/H1Emu Launcher/Windows/UpdateWindow.xaml
+++ b/H1Emu Launcher/Windows/UpdateWindow.xaml
@@ -11,20 +11,18 @@
         MinHeight="200"
         MaxHeight="700"
         WindowStartupLocation="CenterScreen"
-        WindowStyle="SingleBorderWindow"
         ResizeMode="NoResize"
         SizeToContent="WidthAndHeight"
         Background="Transparent"
         FontFamily="Bahnschrift Light"
         FontSize="16"
         Foreground="FloralWhite"
-        ContentRendered="UpdateWindowContentRendered"
         Loaded="UpdateWindowLoaded"
         Closing="UpdateWindowClosing">
 
     <!-- Keep window animations -->
     <WindowChrome.WindowChrome>
-        <WindowChrome GlassFrameThickness="1" CornerRadius="0" CaptionHeight="0" UseAeroCaptionButtons="False" ResizeBorderThickness="7"/>
+        <WindowChrome GlassFrameThickness="1" CaptionHeight="0" NonClientFrameEdges="Bottom, Left, Right"/>
     </WindowChrome.WindowChrome>
 
     <Window.Resources>
